--- a/index.html
+++ b/index.html
@@ -12,9 +12,36 @@
     <!-- navbar -->
     <nav></nav>
     <!-- header -->
-    <header></header>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-4"></div>
+            </div>
+            <div class="row">
+                <div class="col-8"></div>
+            </div>
+            <div class="row">
+                <div class="col-6"></div>
+            </div>
+            <div class="row">
+                <div class="col-10"></div>
+            </div>
+        </div>
+    </header>
     <!-- main -->
-    <main></main>
+    <main> 
+        <!-- portfolio -->
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6 col-xxl-4"></div>
+                <div class="col-12 col-lg-6 col-xxl-4"></div>
+                <div class="col-12 col-lg-6 col-xxl-4"></div>
+                <div class="col-12 col-lg-6 col-xxl-4"></div>
+                <div class="col-12 col-lg-6 col-xxl-4"></div>
+                <div class="col-12 col-lg-6 col-xxl-4"></div>
+            </div>
+        </div>
+    </main>
     <!-- footer -->
     <footer></footer>
 
