add main and footer

--- a/index.html
+++ b/index.html
@@ -31,16 +31,45 @@
     <!-- main -->
     <main> 
         <!-- portfolio -->
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-lg-6 col-xxl-4"></div>
-                <div class="col-12 col-lg-6 col-xxl-4"></div>
-                <div class="col-12 col-lg-6 col-xxl-4"></div>
-                <div class="col-12 col-lg-6 col-xxl-4"></div>
-                <div class="col-12 col-lg-6 col-xxl-4"></div>
-                <div class="col-12 col-lg-6 col-xxl-4"></div>
+        <section class="portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-6 col-xxl-4"></div>
+                    <div class="col-12 col-lg-6 col-xxl-4"></div>
+                    <div class="col-12 col-lg-6 col-xxl-4"></div>
+                    <div class="col-12 col-lg-6 col-xxl-4"></div>
+                    <div class="col-12 col-lg-6 col-xxl-4"></div>
+                    <div class="col-12 col-lg-6 col-xxl-4"></div>
+                </div>
             </div>
-        </div>
+        </section>
+        <!-- about -->
+        <section class="about">
+            <div class="container container-md">
+                <div class="row">
+                    <div class="col-12 col-lg-6"></div>
+                    <div class="col-12 col-lg-6"></div>
+                </div>
+            </div>
+        </section>
+        <!-- contact me  -->
+        <section class="contact-me">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12"></div>
+                </div>
+            </div>
+        </section>
+        <!-- location  -->
+        <section class="location">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-4"></div>
+                    <div class="col-12 col-lg-4"></div>
+                    <div class="col-12 col-lg-4"></div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer -->
     <footer></footer>
