--- a/index.html
+++ b/index.html
@@ -1,79 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap-Freelancer</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous"> <!-- mettere prima bootstrap e poi stili personalizzati -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <!-- mettere prima bootstrap e poi stili personalizzati -->
     <link rel="stylesheet" href="assets/style.css">
 </head>
+
 <body>
-    <!-- navbar -->
-    <nav></nav>
     <!-- header -->
     <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-4"></div>
+        <nav class="text-light py-3">
+            <div class="container">
+                <div class="row justify-content-between">
+                    <div class="col-auto">Start Bootstrap</div>
+                    <div class="col-auto d-none d-md-block">Item Item Item</div>
+                    <div class="col-auto d-md-none">H</div>
+                </div>
             </div>
-            <div class="row">
-                <div class="col-8"></div>
+        </nav>
+
+        <section class="py-4 text-light text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-11 mx-auto">
+                        <div class="contents">
+                            <img class="w-50" src="img/avatar.svg" alt="#">
+                            <h1 class="my-3">START BOOTSTRAP
+                            </h1>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="row">
-                <div class="col-6"></div>
-            </div>
-            <div class="row">
-                <div class="col-10"></div>
-            </div>
-        </div>
+        </section>
     </header>
     <!-- main -->
-    <main> 
+    <main>
         <!-- portfolio -->
         <section class="portfolio">
             <div class="container">
-                <div class="row">
-                    <div class="col-12 col-lg-6 col-xxl-4"></div>
-                    <div class="col-12 col-lg-6 col-xxl-4"></div>
-                    <div class="col-12 col-lg-6 col-xxl-4"></div>
-                    <div class="col-12 col-lg-6 col-xxl-4"></div>
-                    <div class="col-12 col-lg-6 col-xxl-4"></div>
-                    <div class="col-12 col-lg-6 col-xxl-4"></div>
+                <h2 class="text-center my-3">PORTFOLIO</h2>
+                <div class="row g-3">
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="contents rounded"></div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="contents rounded"></div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="contents rounded"></div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="contents rounded"></div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="contents rounded"></div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="contents rounded"></div>
+                    </div>
                 </div>
             </div>
         </section>
         <!-- about -->
         <section class="about">
-            <div class="container container-md">
-                <div class="row">
-                    <div class="col-12 col-lg-6"></div>
-                    <div class="col-12 col-lg-6"></div>
+            <div class="container">
+                <h1 class="text-center">About</h1>
+                <div class="row g-4">
+                    <div class="col-10 col-md-5 offset-1">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus animi repellendus debitis
+                        accusamus optio dolores consequatur libero provident! Harum nisi facere culpa iure modi officia
+                        dolor fuga illo reiciendis neque!
+                        Id facilis tempora in enim autem impedit cumque, fugit ad, dolorem temporibus culpa nesciunt aliquam
+                        earum quod repellendus repudiandae animi! Assumenda vel in excepturi atque expedita qui. Debitis,
+                        rem? Aut!
+                    </div>
+                    <div class="col-10 col-md-5 offset-1 offset-md-0">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti vel magni voluptatum nostrum
+                        commodi facilis maiores numquam pariatur aliquam unde rerum harum debitis, recusandae voluptatem
+                        nemo doloremque quis adipisci at.
+                        Quam mollitia voluptate saepe libero assumenda. Officia rem esse nostrum voluptate quasi labore est
+                        dolore expedita et in maiores accusamus at animi, facilis dolorem asperiores, eius eum incidunt.
+                        Voluptas, sed?
+                    </div>
                 </div>
             </div>
         </section>
         <!-- contact me  -->
         <section class="contact-me">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12"></div>
-                </div>
-            </div>
         </section>
         <!-- location  -->
         <section class="location">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-lg-4"></div>
-                    <div class="col-12 col-lg-4"></div>
-                    <div class="col-12 col-lg-4"></div>
-                </div>
-            </div>
         </section>
     </main>
     <!-- footer -->
     <footer></footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
