add img in "portfolio" and add section="about" to main

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <nav class="text-light py-3">
             <div class="container">
                 <div class="row justify-content-between">
-                    <div class="col-auto">Start Bootstrap</div>
-                    <div class="col-auto d-none d-md-block">Item Item Item</div>
+                    <div class="col-auto">START BOOTSTRAP</div>
+                    <div class="col-auto d-none d-md-block">PORTFOLIO ABOUT CONTACT</div>
                     <div class="col-auto d-md-none">H</div>
                 </div>
             </div>
@@ -28,9 +28,9 @@
         <section class="py-4 text-light text-center">
             <div class="container">
                 <div class="row">
-                    <div class="col-11 mx-auto">
+                    <div class="col-11 mx-auto col-md-4 col-lg-4">
                         <div class="contents">
-                            <img class="w-50" src="img/avatar.svg" alt="#">
+                            <img class="w-100" src="img/avatar.svg" alt="#">
                             <h1 class="my-3">START BOOTSTRAP
                             </h1>
                         </div>
@@ -47,30 +47,42 @@
                 <h2 class="text-center my-3">PORTFOLIO</h2>
                 <div class="row g-3">
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="contents rounded"></div>
+                        <div class="contents">
+                            <img class="w-100 rounded" src="img/cabin.png" alt="#">
+                        </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="contents rounded"></div>
+                        <div class="contents">
+                            <img class="w-100 rounded" src="img/cake.png" alt="#">
+                        </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="contents rounded"></div>
+                        <div class="contents">
+                            <img class="w-100 rounded" src="img/game.png" alt="#">
+                        </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="contents rounded"></div>
+                        <div class="contents">
+                            <img class="w-100 rounded" src="img/safe.png" alt="#">
+                        </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="contents rounded"></div>
+                        <div class="contents">
+                            <img class="w-100 rounded" src="img/submarine.png" alt="#">
+                        </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="contents rounded"></div>
+                        <div class="contents">
+                            <img class="w-100 rounded" src="img/circus.png" alt="#">
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- about -->
         <section class="about">
-            <div class="container">
-                <h1 class="text-center">About</h1>
+            <div class="container text-light">
+                <h2 class="text-center py-3 mt-5">ABOUT</h2>
                 <div class="row g-4">
                     <div class="col-10 col-md-5 offset-1">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus animi repellendus debitis
