--- a/index.html
+++ b/index.html
@@ -15,20 +15,32 @@
 <body>
     <!-- header -->
     <header>
-        <nav class="text-light py-3">
+        <nav class="navbar navbar-expand-md bg-dark justify-content-s" data-bs-theme="dark">
             <div class="container">
-                <div class="row justify-content-between">
-                    <div class="col-auto">START BOOTSTRAP</div>
-                    <div class="col-auto d-none d-md-block">PORTFOLIO ABOUT CONTACT</div>
-                    <div class="col-auto d-md-none">H</div>
-                </div>
+            <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">PORTFOLIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">ABOUT</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active" aria-current="page" href="#">CONTACT</a>
+                    </li>
+                </ul>
+            </div>
             </div>
         </nav>
 
         <section class="py-4 text-light text-center">
             <div class="container">
                 <div class="row">
-                    <div class="col-11 mx-auto col-md-4 col-lg-4">
+                    <div class="col-6 mx-auto col-md-4 col-lg-4">
                         <div class="contents">
                             <img class="w-100" src="img/avatar.svg" alt="#">
                             <h1 class="my-3">START BOOTSTRAP
