--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <!-- mettere prima bootstrap e poi stili personalizzati -->
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 
 <body>
@@ -92,7 +93,7 @@
             </div>
         </section>
         <!-- about -->
-        <section class="about">
+        <section class="about mb-5">
             <div class="container text-light">
                 <h2 class="text-center py-3 mt-5">ABOUT</h2>
                 <div class="row g-4">
@@ -112,11 +113,33 @@
                         dolore expedita et in maiores accusamus at animi, facilis dolorem asperiores, eius eum incidunt.
                         Voluptas, sed?
                     </div>
+                    <div class="d-grid gap-2 col-auto mx-auto">
+                        <button type="button" class="btn btn-outline-light mb-3"><i class="fa-solid fa-download" style="color: #fafafa;"></i> Download</button>
+                    </div>
                 </div>
             </div>
         </section>
         <!-- contact me  -->
         <section class="contact-me">
+            <div class="container">
+                <h2 class="text-center my-3">CONTACT ME</h2>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Name</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1"   placeholder="name">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Phone number</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="12345">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+            </div>
         </section>
         <!-- location  -->
         <section class="location">
