--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
         </section>
     </main>
     <!-- footer -->
-    <footer></footer>
+    <footer class="text-center text-light">
+        <span>Copyright <i class="fa-regular fa-copyright" style="color: #ffffff;"></i> Your Website 2023</span>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
