add line and star

--- a/index.html
+++ b/index.html
@@ -41,12 +41,19 @@
         <section class="py-4 text-light text-center mt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-6 mx-auto col-md-4 col-lg-4">
+                    <div class="col-8 mx-auto col-md-6 col-lg-5">
                         <div class="contents">
                             <img class="w-100" src="img/avatar.svg" alt="#">
                             <h1 class="my-3">START BOOTSTRAP
                             </h1>
                         </div>
+                        <div class="line-star d-flex justify-content-center align-items-center gap-2 mb-2">
+                            <span class="white"></span>
+                            <span class="star"><i class="fa-solid fa-star" style="color: #ffffff;"></i></span>
+                            <span class="white"></span>
+                        </div>
+                        <h6>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR
+                        </h6>
                     </div>
                 </div>
             </div>
@@ -58,6 +65,11 @@
         <section class="portfolio">
             <div class="container">
                 <h2 class="text-center my-3">PORTFOLIO</h2>
+                <div class="line-star d-flex justify-content-center align-items-center gap-2 mb-2">
+                    <span class="black"></span>
+                    <span class="star"><i class="fa-solid fa-star" style="color: black"></i></span>
+                    <span class="black"></span>
+                </div>
                 <div class="row g-3">
                     <div class="col-12 col-sm-6 col-lg-4">
                         <div class="contents">
@@ -96,6 +108,11 @@
         <section class="about mb-5">
             <div class="container text-light">
                 <h2 class="text-center py-3 mt-5">ABOUT</h2>
+                <div class="line-star d-flex justify-content-center align-items-center gap-2 mb-2">
+                    <span class="white"></span>
+                    <span class="star"><i class="fa-solid fa-star" style="color: #ffffff;"></i></span>
+                    <span class="white"></span>
+                </div>
                 <div class="row g-4">
                     <div class="col-10 col-md-5 offset-1">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus animi repellendus debitis
@@ -123,6 +140,11 @@
         <section class="contact-me mb-5">
             <div class="container">
                 <h2 class="text-center my-3">CONTACT ME</h2>
+                <div class="line-star d-flex justify-content-center align-items-center gap-2 mb-2">
+                    <span class="black"></span>
+                    <span class="star"><i class="fa-solid fa-star" style="color: black"></i></span>
+                    <span class="black"></span>
+                </div>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Name</label>
                     <input type="email" class="form-control" id="exampleFormControlInput1"   placeholder="name">
