--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
             <div class="container text-light">
                 <h2 class="text-center py-3 mt-5">ABOUT</h2>
                 <div class="line-star d-flex justify-content-center align-items-center gap-2 mb-2">
-                    <span class="white"></span>
+                    <span class="white-2"></span>
                     <span class="star"><i class="fa-solid fa-star" style="color: #ffffff;"></i></span>
-                    <span class="white"></span>
+                    <span class="white-2"></span>
                 </div>
                 <div class="row g-4">
                     <div class="col-10 col-md-5 offset-1">
