add hover to images

--- a/index.html
+++ b/index.html
@@ -72,33 +72,33 @@
                 </div>
                 <div class="row g-3">
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="contents">
-                            <img class="w-100 rounded" src="img/cabin.png" alt="#">
+                        <div class="contents rounded overflow-hidden">
+                            <img class="w-100" src="img/cabin.png" alt="#">
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="contents">
-                            <img class="w-100 rounded" src="img/cake.png" alt="#">
+                        <div class="contents rounded overflow-hidden">
+                            <img class="w-100" src="img/cake.png" alt="#">
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="contents">
-                            <img class="w-100 rounded" src="img/game.png" alt="#">
+                        <div class="contents rounded overflow-hidden">
+                            <img class="w-100" src="img/game.png" alt="#">
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="contents">
-                            <img class="w-100 rounded" src="img/safe.png" alt="#">
+                        <div class="contents rounded overflow-hidden">
+                            <img class="w-100" src="img/safe.png" alt="#">
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="contents">
-                            <img class="w-100 rounded" src="img/submarine.png" alt="#">
+                        <div class="contents rounded overflow-hidden">
+                            <img class="w-100" src="img/submarine.png" alt="#">
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="contents">
-                            <img class="w-100 rounded" src="img/circus.png" alt="#">
+                        <div class="contents rounded overflow-hidden">
+                            <img class="w-100" src="img/circus.png" alt="#">
                         </div>
                     </div>
                 </div>
